# ffs-man

./: Pipfile  main.py  pyproject.toml
ffs_man/: __init__.py  args.py  cache.py  config.py  errors.py  host_man.py
ffs_man/GUI/: __init__.py  add_host.py  main.py  popups.py
