[tool.poetry]
name = "FFS-Man"
version = "1.0"
description = "Manage your SSHFS sessions and mounts with ease!"
authors = ["Taylor-Jayde J. Blackstone <tayjaybabee@gmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.7"
PySimpleGUIQt = "^0.35.0"
inspy-logger = "2.0.1b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
